--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-joblib
-jupyter
+# Core data science libraries
+pandas>=1.5.0
+numpy>=1.23.0
+
+# Visualization libraries
+matplotlib>=3.6.0
+seaborn>=0.12.0
+
+# Machine learning
+scikit-learn>=1.1.0
+joblib>=1.2.0
+
+# Development / Notebooks
+jupyter>=1.0.0
